[gd_scene load_steps=4 format=3 uid="uid://4uqbv3h85ikn"]

[ext_resource type="Texture2D" uid="uid://c33hjk18nkm0q" path="res://assets/sheet/explosable.png" id="1_8xjp1"]
[ext_resource type="Script" path="res://script/passage_secret_explosible.gd" id="1_dsulm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w78sd"]
radius = 27.0
height = 72.0

[node name="passage_secret_explosible" type="Area2D"]
scale = Vector2(0.45, 0.45)
collision_layer = 4
collision_mask = 133
script = ExtResource("1_dsulm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.33333, -32.1944)
scale = Vector2(1, 1.00781)
texture = ExtResource("1_8xjp1")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.33333, -17.4444)
shape = SubResource("CapsuleShape2D_w78sd")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
